--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "theme-kit",
+  "name": "tzm-theme-kit",
   "version": "1.0.0",
   "description": "A starter project to build your own Bootstrap 4 themes",
   "repository": "https://github.com/HackerThemes/theme-kit",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "node_modules/gulp/bin/gulp.js watch"
+    "watch": "node_modules/gulp/bin/gulp.js watch",
+    "build:dev": "NODE_ENV=dev webpack --mode development"
   },
   "keywords": [
     "bootstrap",
@@ -21,13 +22,9 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.9.3",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rename": "*",
-    "gulp-sass": "^4.0.1",
-    "gulp-scss-lint": "^0.6.1",
-    "gulp-sourcemaps": "^2.6.4"
+    "html-webpack-plugin": "^4.0.0-alpha",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-merge": "^4.1.3"
   }
 }
