added pug loader

--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "repository": "https://github.com/HackerThemes/theme-kit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "node_modules/gulp/bin/gulp.js watch",
     "build:dev": "NODE_ENV=dev webpack --mode development"
   },
   "keywords": [
@@ -22,8 +20,18 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "node-sass": "^4.9.2",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.16.0",
+    "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^3.0.8",
     "webpack-merge": "^4.1.3"
   }
