--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "repository": "https://github.com/HackerThemes/theme-kit",
   "main": "index.js",
   "scripts": {
-    "build:dev": "NODE_ENV=dev webpack --mode development"
+    "serve": "NODE_ENV=dev webpack-dev-server --open --mode development",
+    "build:prod": "NODE_ENV=prod webpack --mode production"
   },
   "keywords": [
     "bootstrap",
@@ -25,6 +26,7 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
@@ -33,6 +35,7 @@
     "webpack": "^4.16.0",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.3"
   }
 }
